# qrtifactuz

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  regen_qr.py
.claude/: museum-workflow.md
.claude/commands/: build-next.md  debug.md  new-endpoint.md  new-model.md  new-service.md  review-code.md
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/v1/auth/: router.py
app/api/v1/exhibits/: router.py
app/api/v1/museum/: router.py
app/api/v1/profile/: router.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
app/models/: __init__.py  exhibit.py  museum.py  profile.py  user.py
app/schemas/: auth.py  exhibit.py  museum.py  profile.py
app/services/: auth.py  email.py  exhibit.py  google_auth.py  museum.py  otp.py  profile.py  qr_service.py
app/tasks/: celery_app.py  qr_tasks.py
docker/: nginx.conf
frontend/: auth.html  exhibit.html  index.html  profile.html
migrations/: env.py
migrations/versions/: 127f61cab0b3_remove_halls.py  1f24b62d5fa2_add_qr_code_url_to_museums.py  81ade7fee947_create_exhibits.py  a1b2c3d4e5f6_add_country_city_refactor_museum.py  b0d5b2085f6a_create_museums_and_halls.py  c1d2e3f4g5h6_add_audio_media_url_to_exhibit_translations.py  dac539bbdd83_create_users_and_profiles.py
static/: admin_i18n.js
