[project]
name = "qrtifactuz"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "qrcode[pil]>=7.4.0",
    "pillow>=10.0.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "bcrypt>=4.0.0",
    "sqladmin[full]>=0.20.0",
    "itsdangerous>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
